--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import regex as re"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'a',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'a',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'u',\n",
+       " 'e',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'i']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '[aeiou]'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['puppy', 'puppies', 'puppy']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = 'pupp[y]*[ies]*'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,10 +132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ran', 'run']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = 'r[au]n'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ran', 'relay', 'race', 'run']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = 'r[\\w]*'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,19 +190,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"Th!s !s a sentence w!th spec!al characters !n !t.\""
+    "text = \"This !s a sentence w!th spec!al characters !n !t.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a sentence with special characters in it.'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '!'\n",
+    "grab = re.sub(pattern, 'i', text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,10 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' sentence', ' words', ' varying', ' lengths']"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '\\s?\\w\\w\\w\\w\\w+,?'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,10 +275,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bet', 'bot', 'beat', 'bot', 'bat', 'but', 'bit']"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = 'b\\w*t'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,10 +313,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['peaks', 'people', 'realize', 'breathtaking', 'Nearly']"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '\\w*ea\\w*,?|\\w*eo\\w*,?'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,10 +351,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '[A-Z][\\w]*'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,10 +380,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Teddy Roosevelt', 'Abraham Lincoln']"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '[A-Z][\\w]*\\s[A-Z][\\w]*'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,10 +420,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 143,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\"I will bet you $50 I can get the bartender to give me a free drink.\"',\n",
+       " '\"I am in!\"']"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '\".*?\"'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,10 +461,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['30', '30', '14', '16', '10']"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '[\\d]+'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,10 +502,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['876-93-228', '098-32-529']"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '\\d{3}-\\d{2}-\\d{3}'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,16 +531,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['(847)789-0984', '(987)222-0901']"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '\\(\\d{3}\\)\\d{3}-\\d{4}'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 15. Use a regular expression to find and extract all the formatted numbers (both social security and phone) from the text below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['876-93-228', '(847)789-0984', '098-32-529', '(987)222-0901']"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = '\\d{3}-\\d{2}-\\d{3}|\\(\\d{3}\\)\\d{3}-\\d{4}'\n",
+    "grab = re.findall(pattern, text)\n",
+    "grab"
    ]
   },
   {
@@ -349,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
